# blink

./: .gitmodules  CMakeLists.txt  README.md
lib/: .gitignore
src/: atlas.cpp  atlas.hpp  cursor.hpp  document.cpp  document.hpp  editor.cpp  editor.hpp  font.cpp  font.hpp  fps_manager.cpp  fps_manager.hpp  freetype.cpp  freetype.hpp  glyph_cache.cpp  glyph_cache.hpp  imgui_style.hpp  loader.cpp  loader.hpp  main.cpp  mesh.cpp  mesh.hpp  range.cpp  range.hpp  render_context.hpp  renderer.cpp  renderer.hpp  selection.cpp  selection.hpp  shader.cpp  shader.hpp  shader_src.hpp  text_buffer.cpp  text_buffer.hpp  theme.hpp  window.cpp  window.hpp
